--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Velonix - Professzionális Weboldal Megoldások</title>
+    <meta name="description" content="Velonix - Professzionális weboldal készítés és karbantartás vállalkozásoknak. Precíz munka, alázatos hozzáállás.">
+<meta name="keywords" content="weboldal készítés, weboldal karbantartás, Velonix, olcsó weboldal, programozás">
+<meta name="author" content="Jandricza Milán">
+<meta property="og:title" content="Velonix - Értéket teremtünk a digitális térben">
+<meta property="og:description" content="Weboldalak készítése és karbantartása 16:00 és 18:00 között. Keressen bizalommal!">
+<meta property="og:type" content="website">
     <style>
         body {
             margin: 0;
@@ -133,4 +139,5 @@
     </div>
 
 </body>
+
 </html>
