--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <meta property="og:title" content="Velonix - Értéket teremtünk a digitális térben">
 <meta property="og:description" content="Weboldalak készítése és karbantartása 16:00 és 18:00 között. Keressen bizalommal!">
 <meta property="og:type" content="website">
-    <style>
+    <meta name="google-site-verification" content="o1D8xWbzIXFtawz9lYa80HKMtK4zHDOI48KHqCsqOxE" />
+    <style>   
         body {
             margin: 0;
             padding: 0;
@@ -141,3 +142,4 @@
 </body>
 
 </html>
+
