--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Velonix - Professzionális Weboldal Megoldások</title>
+    <meta name="google-site-verification" content="o1D8xWbzIXFtawz9lYa80HKMtK4zHDOI48KHqCsqOxE" />
     <style>
         body {
             margin: 0;
@@ -134,3 +135,4 @@
 
 </body>
 </html>
+
